feat: fix bug